--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -2310,9 +2310,9 @@ table.dataTable thead > tr > td.sorting {
 }
 .continue-btn {
     background-color: #fff;
-    border: 1px solid #00c5fb;
+    border: 1px solid #B44C27;
     border-radius: 50px;
-    color: #00c5fb;
+    color: #B44C27;
     display: block;
     font-size: 18px;
     font-weight: 600;
@@ -2322,15 +2322,15 @@ table.dataTable thead > tr > td.sorting {
 .continue-btn:hover,
 .continue-btn:focus,
 .continue-btn:active {
-	background-color: #00c5fb;
-	border: 1px solid #00c5fb;
+	background-color: #B44C27;
+	border: 1px solid #B44C27;
 	color: #fff;
 }
 .cancel-btn {
     background-color: #fff;
-    border: 1px solid #00c5fb;
+    border: 1px solid #B44C27;
     border-radius: 50px;
-    color: #00c5fb;
+    color: #B44C27;
     display: block;
     font-size: 18px;
     font-weight: 600;
@@ -2340,8 +2340,8 @@ table.dataTable thead > tr > td.sorting {
 .cancel-btn:hover,
 .cancel-btn:focus,
 .cancel-btn:active {
-	background-color: #00c5fb;
-	border: 1px solid #00c5fb;
+	background-color: #B44C27;
+	border: 1px solid #B44C27;
 	color: #fff;
 }
 
